# Agentic-SOC-Response

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
agents/: factory.py  profiles.py
logs/: incident_001.txt  incident_002.txt  incident_003.txt
utils/: config_loader.py
