[project]
name = "agentic-soc-response"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlota de la Vega",email = "carlotadlavega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "pyautogen (>=0.10.0,<0.11.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ruff (>=0.15.11,<0.16.0)",
    "ag2[gemini] (>=0.12.0,<0.13.0)",
    "google-genai (>=1.73.1,<2.0.0)",
    "vertexai (>=1.71.1,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
